--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -10,6 +10,11 @@
         <li><a href="#tab-event">{{ _('event')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
         <li><a href="#tab-actor">{{ _('actor')|uc_first }} ({{ tables['actor']['data']|length }})</a></li>
         <li><a href="#tab-place">{{ _('place')|uc_first }} ({{ tables['place']['data']|length }})</a></li>
+        {% for table_name in ['feature', 'stratigraphic-unit', 'find'] %}
+            {% if tables[table_name]['data']|length > 0 %}
+                <li><a href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} ({{ tables[table_name]['data']|length }})</a></li>
+            {% endif %}
+        {% endfor %}
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference']['data']|length }})</a></li>
         <li><a href="#tab-text">{{ _('texts')|uc_first }} ({{ tables['text']['data']|length }})</a></li>
         <li><a href="#tab-file">{{ _('files')|uc_first }}  ({{ tables['file']['data']|length }})</a></li>
@@ -27,9 +32,9 @@
         {{ tables['info']|data_table|safe }}
         {{ source|description|safe }}
     </div>
-    {% for name in ['event', 'actor', 'place'] %}
+    {% for name in ['event', 'actor', 'place', 'feature', 'stratigraphic-unit', 'find'] %}
         <div id="tab-{{ name }}">
-            {% if 'editor'|is_authorized: %}
+            {% if 'editor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find']: %}
                 <div class="button-bar">
                     <a href="{{ url_for('source_add2', id_=source.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
                     {% if name == 'place' %}
