Removing superfluous colon at blocks from Jinja2 templates

--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -23,7 +23,7 @@
     <div id="tab-info">
         <div class="button-bar">
             {{ reference|page_buttons|safe }}
-            {% if 'editor'|is_authorized: %}
+            {% if 'editor'|is_authorized %}
                 <a href="{{ url_for('reference_update', id_=reference.id) }}">{{ _('edit')|uc_first }}</a>
                 {{ reference|display_delete_link|safe }}
             {% endif %}
@@ -35,7 +35,7 @@
     </div>
     {% if reference.system_type == 'information carrier' %}
         <div id="tab-source">
-            {% if 'editor'|is_authorized: %}
+            {% if 'editor'|is_authorized %}
                 <div class="button-bar">
                     <a href="{{ url_for('reference_add2', reference_id=reference.id, class_name='source')}}">{{ _('add')|uc_first }}</a>
                     <a href="{{ url_for('source_insert', origin_id=reference.id) }}">+ {{ _('source')|uc_first }}</a>
@@ -44,10 +44,10 @@
             {{ tables['source']|pager|safe }}
         </div>
     {% else %}
-        {% for name in ['source', 'event', 'actor', 'place', 'feature', 'stratigraphic-unit', 'find', 'file']: %}
+        {% for name in ['source', 'event', 'actor', 'place', 'feature', 'stratigraphic-unit', 'find', 'file'] %}
             {% if name not in ['feature', 'stratigraphic-unit', 'find'] or tables[name]['data']|length > 0 %}
                 <div id="tab-{{name}}">
-                    {% if 'editor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find']: %}
+                    {% if 'editor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
                         <div class="button-bar">
                             <a href="{{ url_for('reference_add2', reference_id=reference.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
                             {% if name == 'place' %}
