--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -20,7 +20,7 @@
     </ul>
     <div id="tab-info">
         <div class="button-bar">
-            {% if 'editor'|is_authorized: %}
+            {% if 'editor'|is_authorized %}
                 <a href="{{ url_for('file_update', id_=entity.id) }}">{{ _('edit')|uc_first }}</a>
                 {{ entity|display_delete_link|safe }}
             {% endif %}
@@ -37,7 +37,7 @@
                 {{ tables['info']|data_table|safe }}
             </div>
             <div class="preview" style="float:left;">
-                {% if preview: %}
+                {% if preview %}
                     <a href="{{ url_for('display_file', filename=filename) }}" target="_blank">
                         <img alt="{{ filename }}" src="{{ url_for('display_file', filename=filename) }}" />
                     </a>
@@ -50,7 +50,7 @@
         {{ entity|description|safe }}
     </div>
     <div id="tab-source">
-        {% if 'editor'|is_authorized: %}
+        {% if 'editor'|is_authorized %}
             <div class="button-bar">
                 <a href="{{ url_for('file_add2', id_=entity.id, class_name='source')}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('source_insert', origin_id=entity.id) }}">+ {{ _('source')|uc_first }}</a>
@@ -78,7 +78,7 @@
         {% endif %}
     {% endfor %}
     <div id="tab-reference">
-        {% if 'editor'|is_authorized: %}
+        {% if 'editor'|is_authorized %}
             <div class="button-bar">
                 <a href="{{ url_for('reference_add', origin_id=entity.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='bibliography', origin_id=entity.id) }}">+ {{ _('bibliography')|uc_first }}</a>
