--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -11,9 +11,9 @@
         <link rel="stylesheet" href="/static/css/reset.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/static/vendor/jquery/jquery-ui-1.12.1/jquery-ui.min.css" />
         <link rel="stylesheet" href="/static/vendor/jquery/jstree-3.3.4/themes/default/style.min.css" />
-        {% for css_file in ['style.css', 'color.css', 'images.css']: %}
+        {% for css_file in ['style.css', 'color.css', 'images.css'] %}
             <link rel="stylesheet" href="/static/css/{{ css_file }}?v={{ config['VERSION'] }}" />
-            {% if current_user.is_authenticated: %}
+            {% if current_user.is_authenticated %}
                 {% set css_file_path = '/static/themes/' + current_user.settings['theme'] + '/css/' + css_file %}
                 {% if css_file_path|test_file %}
                     <link rel="stylesheet" href="{{ css_file_path }}?v={{ config['VERSION'] }}" />
@@ -92,10 +92,10 @@
                 <div id="language-menu">
                     <img class="zoom" src="/static/images/icons/zoom-in.png" title="{{ _('zoom in') }}" onclick="resizeText(1)" alt="{{ _('zoom in') }}" />
                     <img class="zoom" src="/static/images/icons/zoom-out.png" title="{{ _('zoom out') }}" onclick="resizeText(-1)" alt="{{ _('zoom out') }}" />
-                    {% for language in config['LANGUAGES'].keys()|sort: %}
-                        {% if 'language' in session and session['language'] == language: %}
+                    {% for language in config['LANGUAGES'].keys()|sort %}
+                        {% if 'language' in session and session['language'] == language %}
                             <span>{{ language|upper }}</span>
-                        {% else: %}
+                        {% else %}
                             <a href="{{ url_for('set_locale', language=language) }}">{{ language|upper }}</a>
                         {% endif %}
                     {% endfor %}
