--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -21,9 +21,9 @@
             <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
         {% endif %}
         {% if 'admin'|is_authorized %}
-            <a href="{{ url_for('settings_index') }}">{{ _('general')|uc_first }}</a>
-            <a href="{{ url_for('settings_index') }}">{{ _('mail')|uc_first }}</a>
-            <a href="{{ url_for('settings_index') }}">{{ _('authentication')|uc_first }}</a>
+            <a href="{{ url_for('settings_general') }}">{{ _('general')|uc_first }}</a>
+            <a href="{{ url_for('settings_mail') }}">{{ _('mail')|uc_first }}</a>
+            <a href="{{ url_for('settings_authentication') }}">{{ _('authentication')|uc_first }}</a>
         {% endif  %}
 
         <h1>{{ _('logs')|uc_first }}</h1>
