Generate password function for profile and user form

--- a/openatlas/templates/profile/password.html
+++ b/openatlas/templates/profile/password.html
@@ -5,4 +5,11 @@
 {% endblock %}
 {% block content %}
     {{ form|display_form('password-form')|safe }}
+    <script>
+        $(document).ready(function () {
+            $("#show_passwords").after(function() {
+              return '<a id="generate-password" class="button">{{ _('generate password')|uc_first }}</a>';
+            });
+        });
+    </script>
 {% endblock %}
