Display warning if upload directory isn't writeable

--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="button-bar">
+
         <h1 >{{ _('user')|uc_first }}</h1>
         <a href="{{ url_for('user_index') }}">{{ _('list')|uc_first }}</a>
         {% if 'manager'|is_authorized and session['settings']['mail'] %}
@@ -14,6 +15,9 @@
         <a href="{{ url_for('file_index') }}">{{ _('list')|uc_first }}</a>
         {% if 'manager'|is_authorized %}
             <a href="{{ url_for('admin_file') }}">{{ _('settings')|uc_first }}</a>
+        {% endif %}
+        {% if not upload_dir_writeable %}
+            <span class="error">{{ _('Upload directory not writeable!') }}</span>
         {% endif %}
 
         {% if 'manager'|is_authorized %}
