--- a/openatlas/templates/admin/logo.html
+++ b/openatlas/templates/admin/logo.html
@@ -4,5 +4,12 @@
     > {{ _('logo')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form|safe }}
+    {% if form %}
+        {{ form|display_form|safe }}
+    {% else %}
+        <p>
+            <a class="button" href="{{ url_for('admin_logo', action='remove') }}">{{ _('remove logo')|uc_first }}</a>
+        </p>
+        <img alt="logo" src="{{ url_for('display_file', filename=filename) }}" />
+    {% endif %}
 {% endblock %}
