--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -16,8 +16,8 @@
         {% if 'manager'|is_authorized %}
             <a href="{{ url_for('admin_file') }}">{{ _('settings')|uc_first }}</a>
         {% endif %}
-        {% if not upload_dir_writeable %}
-            <span class="error">{{ _('Upload directory not writeable!') }}</span>
+        {% if not upload_dir_writable %}
+            <span class="error">{{ _('Upload directory not writable!') }}</span>
         {% endif %}
 
         {% if 'manager'|is_authorized %}
