--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -35,5 +35,8 @@
     translate['map_info_description'] = '{{ _('map_info_description')|safe }}';
 </script>
 
-<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.css" />
 <script src="/static/vendor/leaflet/leaflet.js"></script>
+<script src="/static/vendor/leaflet/leaflet.fullscreen/Leaflet.fullscreen.min.js"></script>
+<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.fullscreen/leaflet.fullscreen.css" />
+
