update geonames control

--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -37,6 +37,8 @@
 
 <script src="/static/vendor/leaflet/leaflet.js"></script>
 <script src="/static/vendor/leaflet/leaflet.fullscreen/Leaflet.fullscreen.min.js"></script>
+<script src="/static/vendor/leaflet/leaflet.geonames/L.Control.Geonames.min.js"></script>
 <link rel="stylesheet" href="/static/vendor/leaflet/leaflet.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet/leaflet.fullscreen/leaflet.fullscreen.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.geonames/L.Control.Geonames.css" />
 
