--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -37,8 +37,11 @@
 
 <script src="/static/vendor/leaflet/leaflet.js"></script>
 <script src="/static/vendor/leaflet/leaflet.fullscreen/Leaflet.fullscreen.min.js"></script>
-<script src="/static/vendor/leaflet/leaflet.geonames/L.Control.Geonames.min.js"></script>
+<script src="/static/vendor/leaflet/leaflet.geonames/L.Control.Geonames.js"></script>
+<script src="/static/vendor/leaflet/leaflet.usermarker/leaflet.usermarker.js"></script>
 <link rel="stylesheet" href="/static/vendor/leaflet/leaflet.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet/leaflet.fullscreen/leaflet.fullscreen.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet/leaflet.geonames/L.Control.Geonames.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.usermarker/leaflet.usermarker.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet/font-awesome/css/font-awesome.min.css" />
 
