--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -15,6 +15,7 @@
 -->
 
 <script>
+    var geoNamesUsername = '{{ config['GEONAMES_USERNAME'] }}';
     var gisPointAll = {{ gis_data['gisPointAll']|safe }};
     var gisPointSelected = {{ gis_data['gisPointSelected']|safe }};
     var gisPolygonAll = {{ gis_data['gisPolygonAll']|safe }};
