--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -50,10 +50,6 @@
         Software Development, Concept
     </p>
     <p>
-        <strong>Asil Çetin</strong><br />
-        Software Development, Design
-    </p>
-    <p>
         <strong>Jan Belik</strong><br />
         Logo and Design Consulting
     </p>
@@ -63,6 +59,7 @@
     </p>
     <h2>Contributors</h2>
     <p>
+        Asil Çetin<br />
         Bernhard Koschicek (DPP)<br />
         Christof Rauchenberger<br />
         Johannes Preiser-Kapeller (MEDCON)<br />
