--- a/openatlas/templates/types/view.html
+++ b/openatlas/templates/types/view.html
@@ -11,13 +11,13 @@
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
         {% if tables['subs'].data %}
-            <li><a href="#tab-subs">{{ _('subs')|uc_first }} ({{ tables['subs']['data']|length }})</a></li>
+            <li><a href="#tab-subs">{{ _('subs')|uc_first }} ({{ tables['subs']['data']|length|format_number|format_number }})</a></li>
         {% endif %}
         {% if tables['entities'].data %}
-            <li><a href="#tab-entities">{{ _('entities')|uc_first }} ({{ tables['entities']['data']|length }})</a></li>
+            <li><a href="#tab-entities">{{ _('entities')|uc_first }} ({{ tables['entities']['data']|length|format_number }})</a></li>
         {% endif %}
         {% if tables['link_entities'].data %}
-            <li><a href="#tab-link-entities">{{ _('entities')|uc_first }} ({{ tables['link_entities']['data']|length }})</a></li>
+            <li><a href="#tab-link-entities">{{ _('entities')|uc_first }} ({{ tables['link_entities']['data']|length|format_number|format_number }})</a></li>
         {% endif %}
     </ul>
     <div id="tab-info">
