--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -1,21 +1,6 @@
-<!--
-
-<script src="/static/vendor/leaflet/mapbox.js"></script>
-<script src="/static/vendor/leaflet/L.Control.Geonames.js"></script>
-<script src="/static/vendor/leaflet/leaflet.usermarker.js"></script>
-<script src="/static/vendor/leaflet/leaflet.fullscreen-master/Control.FullScreen.js"></script>
-<script src="/static/vendor/leaflet/easy-button.js"></script>
-<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.fullscreen-master/Control.FullScreen.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet/font-awesome/css/font-awesome.min.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet/L.Control.Geonames.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.usermarker.css" />
-<link href="/static/vendor/leaflet/draw/leaflet.draw.css" rel="stylesheet" type="text/css"/>
-<link href="/static/vendor/leaflet/shapeedit.css" rel="stylesheet" type="text/css"/>
--->
-
 <script>
     var geoNamesUsername = '{{ config['GEONAMES_USERNAME'] }}';
+    var thunderforestKey = '{{ config['THUNDERFOREST_KEY'] }}';
     var gisPointAll = {{ gis_data['gisPointAll']|safe }};
     var gisPointSelected = {{ gis_data['gisPointSelected']|safe }};
     var gisPolygonAll = {{ gis_data['gisPolygonAll']|safe }};
