Maps: cleanup and point layer

--- a/openatlas/templates/place/insert.html
+++ b/openatlas/templates/place/insert.html
@@ -15,8 +15,8 @@
         {{ form|display_form|safe }}
     </div>
     <div id="map" class="map"></div>
-    <script src="/static/js/map.js"></script>
-    <script src="/static/vendor/leaflet/draw/leaflet.draw.js"></script>
-    <script src="/static/vendor/leaflet/shapedraw.js"></script>
-    <script src="/static/vendor/leaflet/draw/edithandler.js"></script>
+    <script src="/static/js/map/map.js"></script>
+    <script src="/static/vendor/leaflet-1.3.1/draw-0.4.2/Leaflet.draw.js"></script>
+    <!-- script src="/static/vendor/leaflet-1.3.1/shapedraw.js"></script -->
+    <!-- script src="/static/vendor/leaflet-1.3.1/draw/edithandler.js"></script -->
 {% endblock %}
