--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -21,13 +21,13 @@
     translate['map_info_description'] = '{{ _('map_info_description')|safe }}';
 </script>
 
-<script src="/static/vendor/leaflet/leaflet.js"></script>
-<script src="/static/vendor/leaflet/leaflet.fullscreen/Leaflet.fullscreen.min.js"></script>
-<script src="/static/vendor/leaflet/leaflet.geonames/L.Control.Geonames.js"></script>
-<script src="/static/vendor/leaflet/leaflet.usermarker/leaflet.usermarker.js"></script>
-<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.fullscreen/leaflet.fullscreen.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.geonames/L.Control.Geonames.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet/leaflet.usermarker/leaflet.usermarker.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet/font-awesome/css/font-awesome.min.css" />
+<script src="/static/vendor/leaflet-1.3.1/leaflet.js"></script>
+<script src="/static/vendor/leaflet-1.3.1/leaflet.fullscreen/Leaflet.fullscreen.min.js"></script>
+<script src="/static/vendor/leaflet-1.3.1/leaflet.geonames/L.Control.Geonames.js"></script>
+<script src="/static/vendor/leaflet-1.3.1/leaflet.usermarker/leaflet.usermarker.js"></script>
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/leaflet.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/leaflet.fullscreen/leaflet.fullscreen.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/leaflet.geonames/L.Control.Geonames.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/leaflet.usermarker/leaflet.usermarker.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/font-awesome/css/font-awesome.min.css" />
 
