--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -22,12 +22,12 @@
 </script>
 
 <script src="/static/vendor/leaflet-1.3.1/leaflet.js"></script>
-<script src="/static/vendor/leaflet-1.3.1/leaflet.fullscreen/Leaflet.fullscreen.min.js"></script>
-<script src="/static/vendor/leaflet-1.3.1/leaflet.geonames/L.Control.Geonames.js"></script>
-<script src="/static/vendor/leaflet-1.3.1/leaflet.usermarker/leaflet.usermarker.js"></script>
+<script src="/static/vendor/leaflet-1.3.1/fullscreen/Leaflet.fullscreen.min.js"></script>
+<script src="/static/vendor/leaflet-1.3.1/geonames/L.Control.Geonames.js"></script>
+<script src="/static/vendor/leaflet-1.3.1/usermarker-1.0/leaflet.usermarker.js"></script>
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/leaflet.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/leaflet.fullscreen/leaflet.fullscreen.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/leaflet.geonames/L.Control.Geonames.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/leaflet.usermarker/leaflet.usermarker.css" />
-<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/font-awesome/css/font-awesome.min.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/fullscreen/leaflet.fullscreen.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/geonames/L.Control.Geonames.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/usermarker-1.0/leaflet.usermarker.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/font-awesome-4.3.0/css/font-awesome.min.css" />
 
