--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -20,7 +20,6 @@
     translate['map_info_close'] = '{{ _('map_info_close')|uc_first|safe }}';
     translate['map_info_description'] = '{{ _('map_info_description')|safe }}';
 </script>
-
 <script src="/static/vendor/leaflet-1.3.1/leaflet.js"></script>
 <script src="/static/vendor/leaflet-1.3.1/fullscreen/Leaflet.fullscreen.min.js"></script>
 <script src="/static/vendor/leaflet-1.3.1/geonames/L.Control.Geonames.js"></script>
@@ -30,4 +29,4 @@
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/geonames/L.Control.Geonames.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/usermarker-1.0/leaflet.usermarker.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/font-awesome-4.3.0/css/font-awesome.min.css" />
-
+<link rel="stylesheet" href="/static/css/map.css" />
