--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -20,7 +20,9 @@
     translate['map_info_close'] = '{{ _('map_info_close')|uc_first|safe }}';
     translate['map_info_description'] = '{{ _('map_info_description')|safe }}';
 </script>
+
 <script src="/static/vendor/leaflet-1.3.1/leaflet.js"></script>
+<script src="/static/vendor/leaflet-1.3.1/draw-0.4.14/Leaflet.draw.js"></script>
 <script src="/static/vendor/leaflet-1.3.1/fullscreen/Leaflet.fullscreen.min.js"></script>
 <script src="/static/vendor/leaflet-1.3.1/geonames/L.Control.Geonames.js"></script>
 <script src="/static/vendor/leaflet-1.3.1/usermarker-1.0/leaflet.usermarker.js"></script>
