--- a/openatlas/templates/place/insert.html
+++ b/openatlas/templates/place/insert.html
@@ -16,6 +16,7 @@
     </div>
     <div id="map" class="map"></div>
     <script src="/static/vendor/leaflet-1.3.1/EasyButton-2.3.0/src/easy-button.js"></script>
+    <script src="/static/vendor/leaflet-1.3.1/Leaflet.draw-1.0.2.js"></script>
     <script src="/static/js/map/map.js"></script>
     <script src="/static/js/map/draw.js"></script>
 
