--- a/openatlas/static/css/map.css
+++ b/openatlas/static/css/map.css
@@ -1,26 +1,3 @@
-#selectUnit {
-    position: absolute;
-    display: none;
-    right:0;
-    margin-top: 20px;
-    background: #ffffff;
-    padding: 5px;
-    margin: 8px;
-    border-radius: 6px;
-}
-
-#jstree {
-    display: block;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-}
-
-#demo_q {
-    margin-bottom: 8px;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-}
-
 .shapeInput {
     padding: 6px 8px;
     background: white;
@@ -54,7 +31,7 @@
     font: 10pt "Helvetica New", Arial, Helvetica, sans-serif;
     float: right;
     width: 96%;
-    resize:vertical
+    resize:vertical;
 }
 
 #shapeForm label {
@@ -67,52 +44,37 @@
     margin-top: 7px;
     margin-right: 7px;
     float: right;
-    display: none
 }
 
 #editCloseButton {
     color: #ccc;
     cursor: pointer;
     float: right;
-    display: none
 }
 
 #markerCloseButton {
     color: #ccc;
     cursor: pointer;
     float: right;
-    display: none
 }
 
 #closeButton {
     color: #ccc;
     cursor: pointer;
-    float: right
-}
-
-#saveAdmButton {
-    margin-top: 7px;
-    margin-right: 7px;
     float: right;
-    display: block
 }
 
 #editResetButton, #saveButton, #editSaveButton, #markerSaveButton {
     margin-top: 7px;
     margin-right: 7px;
     float: right;
-    display: none
 }
 
 #popup {
-    width: 120px
+    width: 120px;
 }
 
 #popup input {
     width: 50px;
-    margin: 3px
-}
-
-.jstree li > a > .jstree-icon {
-    display:none !important;
+    margin: 3px;
 }
