--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -3,13 +3,15 @@
     {{ _('network')|uc_first }}
 {% endblock %}
 {% block content %}
-<link rel="stylesheet" href="/static/css/d3.css" />
+<link rel="stylesheet" href="/static/css/network.css" />
 <script src="/static/vendor/d3/d3-5.5.0.min.js"></script>
 <svg></svg>
 <script>
     var graph = {{ json_data|safe }};
     var width = {{ network_params['options']['width'] }};
     var height = {{ network_params['options']['height'] }};
+    var charge = {{ network_params['options']['charge'] }};
+    var distance = {{ network_params['options']['distance'] }}
 </script>
 <script src="/static/js/network.js"></script>
 <div style="float:left;margin-left:2em;">
