--- a/openatlas/templates/place/insert.html
+++ b/openatlas/templates/place/insert.html
@@ -11,15 +11,5 @@
     > + {{ _(title)|uc_first }}
 {% endblock %}
 {% block content %}
-    <div id='map-info-display' style="float:left;">
-        {{ form|display_form|safe }}
-    </div>
-    <div id="map" class="map"></div>
-    <link rel="stylesheet" href="/static/vendor/leaflet-1.3.1/Leaflet.draw-1.0.2.css" />
-    <script src="/static/vendor/leaflet-1.3.1/EasyButton-2.3.0/src/easy-button.js"></script>
-    <script src="/static/vendor/leaflet-1.3.1/Leaflet.draw-1.0.2.js"></script>
-    <script src="/static/js/map/map.js"></script>
-    <script src="/static/js/map/draw.js"></script>
-
-    <!-- script src="/static/vendor/leaflet-1.3.1/draw/edithandler.js"></script -->
+    {% include "place/map_draw.html" %}
 {% endblock %}
