--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -5,8 +5,7 @@
 {% block content %}
     <div style="float:left">
         <a href="/static/images/model/openatlas_schema.png">
-            <img src="/static/images/model/openatlas_schema.png"
-                 style="width:500px" alt="OpenAtlas schema" />
+            <img src="/static/images/model/openatlas_schema.png" style="width:500px" alt="OpenAtlas schema" />
         </a>
     </div>
     <div style="float:left;margin-left:1em;">
